# a-lang

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  Cargo.toml  DOCS_FINAL_SUMMARY.txt  LICENSE-APACHE  LICENSE-MIT  README.md  README.pt.md  RELEASE_SUMMARY.txt  RELEASE_v1.0-preview.txt  SECURITY.md  SECURITY.pt.md  SYNTAX.md  build-all-with-logo.sh  build-packages-v1.sh  build-packages.sh  clean-comments.sh  test_real_server.al  test_simple_server.al  user_server_test.al
docs/archive/: ANALYSIS_SUMMARY.md  BACKEND_COMPLETE.md  BACKEND_FEATURES.md  COMPLETE_STATUS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_PROMPT.md  FEATURE_LIST.md  FFI_IMPLEMENTATION_PLAN.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INPUT_AND_FFI_DOCS.md  IOT_FEATURES_COMPLETE.md  IOT_QUICK_REFERENCE.md  README_BACKEND.md  README_FINAL.md  RELEASE_NOTES_v1.0-preview.md  STDLIB_README.md
examples/: advanced_features.al  advanced_server.al  basic_server.al  confirmed_server.al  critical_features.al  hello_server.al  iot_complete_example.al  js_style.al  operators_demo.al  reactive_features_demo.al  reactive_iot_hub.al  reactive_smart_hub.al  rest_api_example.al  server_api_demo.al  simple_hello.al  stdlib_demo.al  teste.al
release/: SHA256SUMS.txt  alang_1.0-preview_amd64.deb
src/: lib.rs  main.rs
src/ast/: mod.rs
src/interpreter/: mod.rs  value.rs
src/lexer/: mod.rs
src/parallel/: mod.rs
src/parser/: mod.rs
src/reactive/: mod.rs
src/stdlib/: bytes.rs  database.rs  ffi.rs  hardware.rs  http_server.rs  integration.rs  mod.rs  network.rs  system.rs  websocket.rs
src/syntax_ext/: mod.rs
src/time_travel/: mod.rs
src/types/: mod.rs
tests/: stdlib_test.rs
