[package]
name = "a-lang"
version = "1.0.0-preview"
edition = "2021"
authors = ["A-lang Contributors"]
description = "A-lang: A revolutionary scripting language with time-travel debugging, reactive variables, and more"
license = "MIT"
repository = "https://github.com/yourusername/a-lang"

[dependencies]
# Parsing and lexing
logos = "0.13"
chumsky = "0.9"

# Data structures
indexmap = "2.0"
dashmap = "5.5"

# Async runtime for reactive system
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Time-travel debugging support
im = "15.1"  # Persistent data structures
chrono = "0.4"

# Parallelization
rayon = "1.8"

# Serialization for state snapshots
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
miette = { version = "5.10", features = ["fancy"] }

# Pattern matching
pattern-matching = "0.1"

# System info
num_cpus = "1.16"

# FFI support
libloading = "0.8"

# HTTP/HTTPS Server & Client
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = "0.26"
rustls = "0.22"
rustls-pemfile = "2.0"

# Web framework (Express-like)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21" }
tungstenite = "0.21"

# MySQL Database
mysql_async = "0.33"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls"] }

# HTTP utilities
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# REPL support
rustyline = "13.0"


[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[lib]
name = "a_lang"
path = "src/lib.rs"

[[bin]]
name = "alang"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
